--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./icon/avt.JPG" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <title class="head">Nguyen Van Binh</title>
+    <title class="head">Pham The Son</title>
 </head>
 <body onkeydown="keydownHandler(event)">
   <canvas id="bgCanvas"></canvas>
@@ -18,21 +18,21 @@
           <img src="./icon/avt.JPG" alt="">         
         </div>
         <div class="name">
-          <span>BINH KMA</span>  
+          <span>SON LOFI</span>  
         </div>
       </div>
       <div class="row">
         <div class="icon">
-          <a href="https://www.facebook.com/profile.php?id=100030906050783" target="_blank" class="facebook">
+          <a href="https://www.facebook.com/SAD.WALL2003" target="_blank" class="facebook">
             <img src="./icon/icons8-facebook-100.png" alt="">
           </a>
-          <a href="https://www.tiktok.com/@nvb.7?lang=vi-VN&is_copy_url=1&is_from_webapp=v1" target="_blank" class="tiktok">
+          <a href="https://www.tiktok.com/@i.am.sonjuly?lang=vi-VN&is_copy_url=1&is_from_webapp=v1" target="_blank" class="tiktok">
             <img src="./icon/icons8-tiktok-100.png" alt="">
           </a>
-          <a href="https://www.instagram.com/nvbinh.7/" target="_blank" class="instagram">
+          <a href="https://www.instagram.com/hoangtugio2807/" target="_blank" class="instagram">
             <img src="./icon/icons8-instagram-100.png" alt="">
           </a>
-          <a href="https://github.com/NVB07" target="_blank" class="github">
+          <a href="https://github.com/sondeptraicute" target="_blank" class="github">
             <img src="./icon/icons8-github-100.png" alt="">
           </a>
         </div>
